--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,14 @@
+services:
+  - docker:24.0.5-dind
 stages:
-  - call
+  - build
 
-call:
-  stage: call
+build:
+  stage: build
+  variables:
+    IMAGE_TAG: $CI_REGISTRY_IMAGE:latest
   script:
-    - apt-get update
-    - apt-get install curl -y --no-install-recommends
-    - curl --silent "http://192.168.1.119:10000/webhook"
-
+    - apk add --no-cache git
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+    - docker build -t $IMAGE_TAG .
+    - docker push $IMAGE_TAG
