--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,8 @@
             "module": "flask",
             "env": {
                 "FLASK_APP": "app.py",
-                "FLASK_DEBUG": "1"
+                "FLASK_DEBUG": "1",
+                "DATABASE_URL": "mongodb://mongo:MutPZK4lZHzU5jKQ@orangepi3b.local:27000"
             },
             "args": [
                 "run"
